excel-com/tests/ui/attached_cannot_quit.rs
use excel_com::AttachedApplication;

fn attached_session_cannot_quit(session: AttachedApplication<'_>) {
    session.quit();
}

fn main() {}
